# esc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
grammars/: .gitignore  action.g  es4.g  esi.g  esr.g  lpg.cmd  names.g  rule.cmd  wordfile.txt
src/: parser.cpp  parser.h  pool.h  types.h
test/: test.js
